[package]
name = "racker"
version = "0.1.1"
edition = "2021"

description = "racker"
license = "MIT"
authors = ["fade <truefadeoffical@gmail.com>"]
repository = "https://github.com/fadeoffical/racker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# racker
racker-common = { version = "0.1", path = "racker-common" }
racker-plugin = { version = "0.1", path = "racker-plugin" }

# logging
log = "0.4"
fern = { version = "0.6", features = ["colored"] }

# time
chrono = "0.4"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6"
xml-rs = "0.8"

# http
actix-web = { version = "4.3", features = ["rustls"] }


[workspace]
members = ["racker-daemon", "racker-common", "racker-plugin"]
