[package]
name = "racker-common"
version = "0.1.0"
edition = "2021"

description = "Common code for Racker"
license = "MIT"
authors = ["fade <truefadeoffical@gmail.com>"]
repository = "https://github.com/fadeoffical/racker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
