[package]
name = "racker-plugin"
version = "0.1.0"
edition = "2021"

description = "racker plugin system"
license = "MIT"
authors = ["fade <truefadeoffical@gmail.com>"]
repository = "https://github.com/fadeoffical/racker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7"
log = "0.4"

zip = "0.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
